force-app/main/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Submitter_s_CEB_Division__c</fullName>
        <label>Submitter Practice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CEB BPDS</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>ICONO</fullName>
                </value>
                <value>
                    <fullName>KAD</fullName>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
                <value>
                    <fullName>Metrics That Matter (Knowledge Advisors)</fullName>
                </value>
                <value>
                    <fullName>MMKT-CLEX</fullName>
                </value>
                <value>
                    <fullName>MMKT-FLEX</fullName>
                </value>
                <value>
                    <fullName>MMKT-HRLC</fullName>
                </value>
                <value>
                    <fullName>MMKT-ITLEX</fullName>
                </value>
                <value>
                    <fullName>MMKT-MAREX</fullName>
                </value>
                <value>
                    <fullName>MMKT-OLEX</fullName>
                </value>
                <value>
                    <fullName>MMKT-SALEX</fullName>
                </value>
                <value>
                    <fullName>MTM</fullName>
                </value>
                <value>
                    <fullName>PDRI</fullName>
                </value>
                <value>
                    <fullName>SHL</fullName>
                </value>
                <value>
                    <fullName>SMAC</fullName>
                </value>
                <value>
                    <fullName>SOL</fullName>
                </value>
                <value>
                    <fullName>Talent Neuron</fullName>
                </value>
                <value>
                    <fullName>TECH</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_s_Email_Address__c</fullName>
        <description>Comes from the Eloqua form. This value will be used for the GCSC in pulling referrals by their team to report on KPIs</description>
        <inlineHelpText>This referral was submitted through a referral form. This is the email for the contact who submitted it.</inlineHelpText>
        <label>Submitter’s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Global_Lead_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Distributors</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Phase__c</fullName>
        <description>This field has been created as a part of Nomenclature implementation (SSE--113)</description>
        <inlineHelpText>Select the Client Interest that best defines the scope of the client’s project, or Combined if the project is mixed.</inlineHelpText>
        <label>Client Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>TAandTMCombined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Range__c</fullName>
        <label>Tactic Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talent_Level__c</fullName>
        <description>This field has been created as a part of Nomenclature (SSE--113) implementation.</description>
        <inlineHelpText>Select the level of employee that best defines the scope of the clients project.</inlineHelpText>
        <label>Talent Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Entry Level / Associate</fullName>
                </value>
                <value>
                    <fullName>Graduate and Intern</fullName>
                </value>
                <value>
                    <fullName>Professional / Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor Leader</fullName>
                </value>
                <value>
                    <fullName>Senior leadership</fullName>
                    <label>Senior Leadership</label>
                </value>
                <value>
                    <fullName>All Levels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgent_Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Eloqua will update this field automatically</description>
        <inlineHelpText>Submitter noted that this person should be followed up urgently</inlineHelpText>
        <label>Contact Me Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Journey__c</fullName>
        <label>User Journey</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Postcode__c</fullName>
        <label>Zip/Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptype__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>